--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,17 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.list-item{ 
+  list-style: none;
+}
+.list-item:not(:last-child){
+  margin-right: 10px;
+}
+.gallery {  
+  display: flex;
+  align-items: center;  
+}
+.img{
+  border-radius: 50px;
+}
